@@ -1,5 +1,5 @@
 (* camlp4r ./pa_lock.cmo ./pa_html.cmo *)
-(* $Id: util.ml,v 3.43 2000-05-14 18:19:46 ddr Exp $ *)
+(* $Id: util.ml,v 3.44 2000-05-14 19:59:39 ddr Exp $ *)
 (* Copyright (c) 2000 INRIA *)
 
 open Def;
@@ -1577,6 +1577,14 @@ value of_course_died conf p =
   match Adef.od_of_codate p.birth with
   [ Some (Dgreg d _) -> conf.today.year - d.year > 120
   | _ -> False ]
+;
+
+value relation_txt conf sex fam =
+  let is = index_of_sex sex in
+  match fam.relation with
+  [ NotMarried -> ftransl conf "relationship%t to"
+  | Married -> ftransl_nth conf "married%t to" is
+  | Engaged -> ftransl_nth conf "engaged%t with" is ]
 ;
 
 (* Deprecated *)
