@@ -2,6 +2,7 @@ GeneWeb version 3.05
 --------------------
 
 * GeneWeb Service/CGI (gwd)
+  - [14 May 00] Added case "engaged" in "family" forms.
   - [14 May 00] Added option "-images_url" to give an URL to GeneWeb
     images (flags, logo, background, up arrow). Can be useful e.g. in
     cgi mode if the associated Web server answers faster than gwd. By
